@@ -1,8 +1,13 @@
+2004-02-05  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/callgraph_container.cpp: Big Thinko (tm), callee samples offset
+	  are unordered
+
 2004-02-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/callgraph_container.cpp:
 	* libpp/format_output.cpp: arc_recorder::get_caller()/get_callee() name
-	  was reversed (catched by Will Cohen)
+	  was reversed (caught by Will Cohen)
 
 2004-02-02  Philippe Elie  <phil.el@wanadoo.fr>
 
